--- a/editablefields.css
+++ b/editablefields.css
@@ -3,12 +3,24 @@
   padding-right:18px;
 }
 
-div.editablefields_clicktoedit_message { 
+.editablefields .editablefields_clicktoedit_message {
   position: absolute;
-  cursor:pointer;
-  font-size:xx-small;
-  opacity:0.5;
-  display:block;
+  cursor: pointer;
+  font-size: xx-small;
+  opacity: 0.5;
+  /*display: block;*/
   margin-top: -1em;
   z-index: 200;
+}
+
+.editablefields:hover .editablefields_clicktoedit_message {
+  display: inline;
+}
+
+.editablefields_clicktoedit_message:hover {
+  opacity: 1;
+}
+
+.editablefields-hide {
+  display: none;
 }
